--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ main{
     background-color: rgb(238, 236, 236);
 }
 #main--left{
+    position: relative;
     width: 40%;
     height: 100%;
 }
@@ -59,6 +60,29 @@ main{
 }
 #form--title{
     margin-bottom: 15px;
+    font-family: 'Roboto', sans-serif;
+}
+#banner{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.41);
+    height: 20%;
+    width: 100%;
+    top: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#banner img{
+    width: 15%;
+    height: 80%;
+    top: 15px;
+}
+
+#banner p{
+    font-size: 3rem;
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 #signUp{
@@ -94,11 +118,14 @@ main{
     height: 28px;
     box-sizing: border-box;
     padding-left: 5px;
-    font-weight: 600;
+    font-weight: light;
+    outline: none;
 }
 
 .inputBar:focus{
 
+    border: 2px solid blue;
+    box-shadow: -10px 12px 10px -13px rgba(0,0,0,0.75);
 }
 
 
@@ -129,4 +156,21 @@ main{
     text-decoration: none;
     color: #596D48;
 
+}
+
+.error{
+    border: 2px solid red;
+}
+
+#validation{
+    display: none;
+    font-size: 0.6rem;
+    color: red;
+    font-family: 'Roboto', sans-serif;
+}
+#validation-length{
+    display: none;
+    font-size: 0.6rem;
+    color: red;
+    font-family: 'Roboto', sans-serif;
 }
